--- a/Develop/prompt.html
+++ b/Develop/prompt.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Under Construction</title>
+    <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1>Password Generator Template</h1>
+        <h1>Password Generator</h1>
       </header>
       <div class="card">
         <div class="card-header">
-          <h2>This Will not Generate a Password</h2>
+          <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
           <textarea
@@ -25,9 +25,10 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn" disabled>Generate Password</button>
+          <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
+    <script src="script0.js"></script>
   </body>
 </html>
